updated top bar visibility to ensure consistent access to all pages

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -203,6 +203,10 @@ body {
   background-color: darkgreen;
 }
 
+.caseButtons button:disabled {
+  background-color: darkgreen;
+}
+
 .caseButtons button:nth-child(2) {
   background-color: red;
 }
@@ -216,12 +220,20 @@ body {
   top: 0;
   display: flex;
   align-items: center; 
+  justify-content: center;
   border-bottom-style: solid;
   border-bottom-color: var(--resizer-color);
   width: 100;
   height: 76px;
   z-index: 1;
   background-color: var(--div-color-2);
+}
+
+#topBarButtons {
+  display: none;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
 }
 
 .resizer {
